[gd_scene load_steps=8 format=3 uid="uid://b8wp0nfj2j5hb"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_0x3v3"]
[ext_resource type="Shader" path="res://stars.gdshader" id="1_i0603"]
[ext_resource type="Texture2D" uid="uid://cjdpudkr5wsof" path="res://icon.svg" id="2_pswtn"]
[ext_resource type="Script" path="res://background.gd" id="3_akbxp"]
[ext_resource type="LabelSettings" uid="uid://c6gqrpguwyab0" path="res://new_label_settings.tres" id="5_0vydm"]
[ext_resource type="Texture2D" uid="uid://cj1fywx72qb74" path="res://Assets/cake.png" id="6_6878v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jo1l8"]
shader = ExtResource("1_i0603")
shader_parameter/bg_color = null
shader_parameter/offset = Vector2(0, 0)
shader_parameter/bigStarSlow = 2.0
shader_parameter/mediumStarSlow = 6.0
shader_parameter/smallStarSlow = 8.0
shader_parameter/smallStarAmount = 0.002
shader_parameter/mediumStarAmount = 0.01
shader_parameter/bigStarAmount = 0.02

[node name="Main_menu" type="Node2D"]
script = ExtResource("1_0x3v3")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_jo1l8")
position = Vector2(184.5, -1221)
scale = Vector2(74.1641, 43.2656)
texture = ExtResource("2_pswtn")
script = ExtResource("3_akbxp")

[node name="start" type="Button" parent="."]
offset_left = 393.0
offset_top = 163.0
offset_right = 663.0
offset_bottom = 263.0
text = "Start Game
"

[node name="start2" type="Button" parent="."]
offset_left = 697.0
offset_top = 160.0
offset_right = 967.0
offset_bottom = 260.0
text = "Just the boss please"

[node name="graphs" type="Button" parent="."]
offset_left = 396.0
offset_top = 293.0
offset_right = 666.0
offset_bottom = 393.0
text = "Graphs
"

[node name="enemies" type="Button" parent="."]
offset_left = 399.0
offset_top = 430.0
offset_right = 669.0
offset_bottom = 530.0
text = "Ships
"

[node name="Highscore" type="Label" parent="."]
offset_left = 35.0
offset_top = 550.0
offset_right = 281.0
offset_bottom = 620.0
text = "Highscore"
label_settings = ExtResource("5_0vydm")

[node name="mothership_destroyed" type="Sprite2D" parent="."]
visible = false
position = Vector2(110, 489)
scale = Vector2(0.085, 0.085)
texture = ExtResource("6_6878v")

[node name="Label" type="Label" parent="."]
offset_left = 743.0
offset_top = 332.0
offset_right = 1312.0
offset_bottom = 511.0
text = "Use Controller to play
left joystick: movement
right joystick: rotation
right button: shoot
left button: laser
right/left trigger: quick movement left/right. alternatively X and B buttons
start: restart game"

[node name="Container" type="HBoxContainer" parent="."]
offset_left = 23.0
offset_top = 138.0
offset_right = 524.0
offset_bottom = 161.0

[node name="Label2" type="Label" parent="Container"]
layout_mode = 2
text = "This game uses dynamic difficulty adjustment
Each playthrough, your performance is
stored and evaluated, and the strenght of
the enemies is adapted accordingly
This is represented by the 
difficulty_adjustment_rating, which can
be adjusted in the graphs section. 
There you see your overall adjustment 
(first graph)
and your history of each \"wave\", which you
can change as you like (make first wave 
more difficult/easier etc)
"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="start2" to="." method="_on_start_2_pressed"]
[connection signal="pressed" from="graphs" to="." method="_on_graphs_pressed"]
[connection signal="pressed" from="enemies" to="." method="_on_enemies_pressed"]
